# english-practice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: logging.py  settings.py
docs/: deployment.md
scripts/: check_exercises.py  extract.py
scripts/database/: database_schema.sql  init_database.py  populate.py  schema.sql  validate.py  validate_database.py
src/english_practice/: __init__.py  llm.py
src/english_practice/agents/: __init__.py  answer.py  answers.py  assistant.py  base.py  evaluate.py  full_answer.py  rule.py  rules.py
src/english_practice/bot/: __init__.py  formatter.py  handlers.py  keyboards.py  states.py
src/english_practice/extractors/: __init__.py  answer_extractor.py  answers_extractor.py  base_extractor.py  exercise_organizer.py  image_ocr.py  pdf_handler.py  rule_extractor.py  rules_extractor.py  utils.py
src/english_practice/llm/: __init__.py  base.py  dashscope.py  gemini.py  openrouter.py  qwen.py
src/english_practice/models/: __init__.py  agents.py  book.py  constants.py  extraction.py
src/english_practice/prompts/: agent_answer.j2  agent_answers.j2  agent_assistant.j2  agent_evaluate.j2  agent_full_answer.j2  agent_rule.j2  agent_rules.j2
tests/: conftest.py  test_agent_service.py  test_agents_answers.py  test_agents_assistant.py  test_agents_base.py  test_agents_evaluate.py  test_agents_rules.py  test_chat_history.py  test_extractors_answers_extractor.py  test_extractors_base.py  test_extractors_exercise_organizer.py  test_extractors_image_ocr.py  test_extractors_pdf.py  test_extractors_rules_extractor.py  test_extractors_utils.py  test_formatter.py  test_handlers.py  test_keyboards.py  test_llm.py  test_models_agents.py  test_models_book.py  test_repositories_database.py  test_states.py
(+9 files in other folders)
