[project]
name = "english-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seblful", email = "alesha.chimba@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
